2005-10-25  Reiner Steib  <Reiner.Steib@gmx.de>

	* net/browse-url.el (browse-url-of-buffer): Add ".html" to
	filename.

2005-10-25  Masatake YAMATO  <jet@gyve.org>

	* dired-x.el (dired-virtual): Don't use `dired-insert-headerline'.

2005-10-25  Michael Cadilhac  <michael.cadilhac-@t-lrde.epita.fr>  (tiny change)

	* play/blackbox.el (blackbox-redefine-key): New function.
	(blackbox-mode-map): Use it to remap existing bindings for cursor
	motion instead of binding literal keys.

2005-10-25  Glenn Morris  <rgm@gnu.org>

	* calendar/diary-lib.el (diary-list-entries): Prevent infloop when
	diary does not end in a newline.  Do not assume a blank line at
	the start of the diary file.

2005-10-25  Kenichi Handa  <handa@m17n.org>

	* international/quail.el (quail-translate-key): If the input
	method is deterministic and failed to handle the last key, restart
	the key handling loop from an appropriate key.

2005-10-25  Michael Albinus  <michael.albinus@gmx.de>

	* vc.el (vc-dired-mode): Extend comment for binding of
	`directory-listing-before-filename-regexp'.

2005-10-25  Stefan Monnier  <monnier@iro.umontreal.ca>

	* textmodes/texinfo.el (texinfo-mode):
	* textmodes/paragraphs.el (sentence-end-base): Use real chars, so as
	not to unnecessarily expose emacs-mule's internal char codes.

2005-10-25  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-put-breakpoint-icon): Correct help-echo.
	Display hand pointer and help-echo on disabled icon too.
	(gdb-mouse-until): New function.
	(gdb-ann3): Bind it to mouse-2 and drag-mouse-1 in left fringe.

2005-10-24  Chong Yidong  <cyd@stupidchicken.com>

	* menu-bar.el (menu-bar-help-menu): Rename "psychiatrist", in line
	with 2005-10-23 change to doctor.el.

	* finder.el (finder-mode-map): Add follow-link binding.

2005-10-25  Kim F. Storm  <storm@cua.dk>

	* progmodes/gdb-ui.el (gdb-ann3): Bind mouse-3 in left fringe
	to gdb-mouse-toggle-breakpoint-fringe.
	(gdb-mouse-toggle-breakpoint-margin): Rename from